# orafce

./: META.json  Makefile  NEWS  README.asciidoc  README.meson_msvc  aggregate.c  alert.c  assert.c  builtins.h  charlen.c  charpad.c  convert.c  datefce.c  dbms_assert.c  dbms_assert.h  dbms_sql.c  file.c  magic.c  math.c  meson.build  nvarchar2.c  orafce--3.13--3.14.sql  orafce--3.14.sql  orafce--3.15--3.16.sql  orafce--3.16.sql  orafce--3.17--3.18.sql  orafce--3.18.sql  orafce--3.24.sql  orafce--4.10--4.11.sql  orafce--4.10.sql  orafce--4.11--4.12.sql  orafce--4.11.sql  orafce--4.12--4.13.sql  orafce--4.12.sql  orafce--4.13--4.14.sql  orafce--4.13.sql  orafce--4.14--4.15.sql  orafce--4.14.sql  orafce--4.15--4.16.sql  orafce--4.15.sql  (+31 more)
.github/workflows/: main.yml  release.yml
expected/: dbms_pipe_session_B.out  dbms_random.out  dbms_random_1.out  dbms_random_2.out  dbms_random_3.out  dbms_random_4.out  dbms_sql.out  files.out  orafce.out  regexp_func.out
sql/: dbms_pipe_session_A.sql  dbms_pipe_session_B.sql  dbms_random.sql  dbms_sql.sql  files.sql  orafce.sql
